codepkg/objects/Funding_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Funding_Source_1_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Source 1 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Source_1_Percent__c</fullName>
        <label>Funding Source 1 %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funding_Source_1_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Source 1 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Source_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Source 1</label>
        <referenceTo>Funding_Source__c</referenceTo>
        <relationshipLabel>Funding Rules</relationshipLabel>
        <relationshipName>Funding_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Source_2_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Source 2 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Source_2_Percent__c</fullName>
        <label>Funding Source 2 %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funding_Source_2_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Source 2 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Source_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Source 2</label>
        <referenceTo>Funding_Source__c</referenceTo>
        <relationshipLabel>Funding Rules (Funding Source 2)</relationshipLabel>
        <relationshipName>Funding_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Source_3_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Source 3 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Source_3_Percent__c</fullName>
        <label>Funding Source 3 %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funding_Source_3_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Source 3 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Source_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Source 3</label>
        <referenceTo>Funding_Source__c</referenceTo>
        <relationshipLabel>Funding Rules (Funding Source 3)</relationshipLabel>
        <relationshipName>Funding_Rules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Funding Rules</relationshipLabel>
        <relationshipName>Funding_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Percentage__c</fullName>
        <formula>(Funding_Source_1_Percent__c + Funding_Source_2_Percent__c + Funding_Source_3_Percent__c + Funding_Source_4_Percent__c + Funding_Source_5_Percent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <label>Rule Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage Basis</fullName>
                </value>
                <value>
                    <fullName>Sole Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Funding Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Enter_Date_when_type_is_percent</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Rule_Type__c) == &apos;Percentage Basis&apos; &amp;&amp; (
 NOT(ISBLANK( Funding_Source_1_Start_Date__c)) || 
 NOT(ISBLANK( Funding_Source_2_Start_Date__c)) || 
 NOT(ISBLANK( Funding_Source_3_Start_Date__c)) || 
 NOT(ISBLANK( Funding_Source_4_Start_Date__c)) || 
 NOT(ISBLANK( Funding_Source_5_Start_Date__c)) ||
 NOT(ISBLANK( Funding_Source_1_End_Date__c)) || 
 NOT(ISBLANK( Funding_Source_2_End_Date__c)) || 
 NOT(ISBLANK( Funding_Source_3_End_Date__c)) || 
 NOT(ISBLANK( Funding_Source_4_End_Date__c)) || 
 NOT(ISBLANK( Funding_Source_5_End_Date__c)) 
)</errorConditionFormula>
        <errorMessage>You cannot enter value in date fields when the rule type is percentage basis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Enter_Percent_when_type_is_time</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Rule_Type__c) == &apos;Time Period Basis&apos; &amp;&amp; (
 NOT(ISBLANK( Funding_Source_1_Percent__c )) || 
 NOT(ISBLANK( Funding_Source_2_Percent__c )) || 
 NOT(ISBLANK( Funding_Source_3_Percent__c )) || 
 NOT(ISBLANK( Funding_Source_4_Percent__c )) || 
 NOT(ISBLANK( Funding_Source_5_Percent__c )) 
)</errorConditionFormula>
        <errorMessage>You cannot enter value in percent fields when the rule type is Time Period Basis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Text(Rule_Type__c) == &apos;Time Period Basis&apos; &amp;&amp;  
(
(ISBLANK(Funding_Source_1_Start_Date__c) || ISBLANK(Funding_Source_1_End_Date__c)) &amp;&amp; NOT(ISBLANK( Funding_Source_1__c ))|| 
(ISBLANK(Funding_Source_2_Start_Date__c) || ISBLANK(Funding_Source_2_End_Date__c))&amp;&amp; NOT(ISBLANK( Funding_Source_2__c ))|| 
(ISBLANK(Funding_Source_3_Start_Date__c) || ISBLANK(Funding_Source_3_End_Date__c))&amp;&amp; NOT(ISBLANK( Funding_Source_3__c ))|| 
(ISBLANK(Funding_Source_4_Start_Date__c) || ISBLANK(Funding_Source_4_End_Date__c))&amp;&amp; NOT(ISBLANK( Funding_Source_4__c ))|| 
(ISBLANK(Funding_Source_5_Start_Date__c) || ISBLANK(Funding_Source_5_End_Date__c))&amp;&amp; NOT(ISBLANK( Funding_Source_5__c ))
)</errorConditionFormula>
        <errorMessage>Please select the start and end date when the rule type is time period basis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percent_Cannot_be_more_than_100</fullName>
        <active>true</active>
        <errorConditionFormula>Overall_Percentage__c &gt; 1.0</errorConditionFormula>
        <errorMessage>Sum of Percentages of all funding sources cannot be more than 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percent_Type_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Text(Rule_Type__c) == &apos;Percentage Basis&apos; &amp;&amp;  
(
ISBLANK(Funding_Source_1_Percent__c) &amp;&amp; NOT(ISBLANK( Funding_Source_1__c ))|| 
ISBLANK(Funding_Source_2_Percent__c) &amp;&amp; NOT(ISBLANK( Funding_Source_2__c ))|| 
ISBLANK(Funding_Source_3_Percent__c) &amp;&amp; NOT(ISBLANK( Funding_Source_3__c ))|| 
ISBLANK(Funding_Source_4_Percent__c) &amp;&amp; NOT(ISBLANK( Funding_Source_4__c ))|| 
ISBLANK(Funding_Source_5_Percent__c) &amp;&amp; NOT(ISBLANK( Funding_Source_5__c ))
)</errorConditionFormula>
        <errorMessage>Please select the percentage when the rule type is percentage basis</errorMessage>
    </validationRules>
</CustomObject>